@@ -399,6 +399,7 @@ $triggerIds = array_keys($triggers);
 $triggerEditable = API::Trigger()->get([
 	'triggerids' => $triggerIds,
 	'output' => ['triggerid'],
+	'filter' => ['flags' => ZBX_FLAG_DISCOVERY_NORMAL],
 	'editable' => true,
 	'preservekeys' => true
 ]);
